fix clients section overflowing

--- a/style.css
+++ b/style.css
@@ -495,6 +495,7 @@ header {
     flex-direction: column;
     gap: 1rem;
     margin-top: 5rem;
+    overflow: hidden;
 }
 
 #company-clients-header-outter {
@@ -515,7 +516,6 @@ header {
     width: 140%;
     transform: translateX(-7%);
 }
-
 
 .splide__slide {
     border: 1px solid #DDD;
